hover navbar elements v.003

--- a/index.html
+++ b/index.html
@@ -24,67 +24,30 @@
 <body>
     <header>
         <nav>
-            <div class="nav">
-                <div class="logo">schoolMultinotify</div>
-                    <ul>
-                        <li><a class="active" href="#">Home</a></li>
-                        <li><a href="#">About</a></li>
-                        <li><a href="#">Contact</a></li>
-                        <li><a href="#">Login</a></li>
-                    </ul>
+            <div class="navbar navbar-expand-lg navbar-dark bg-transparent container">
+                <button class="navbar-toggler" data-toggle="collapse" type="button" data-target="#navbarSupportedContent"
+                aria-controls="navbarSupportedContent" aria-expanded="true" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <a class="logo navbar-brand"">schoolMultinotify</a>
+                    <div class="navbar-collapse collapse show" id="navbarSupportedContent">
+                        <ul class="navbar-nav ml-auto">
+                            <li class="nav-item"><a class="active" href="#">Home</a></li>
+                            <li class="nav-item"><a href="#">About</a></li>
+                            <li class="nav-item"><a href="#">Contact</a></li>
+                            <li class="nav-item"><a href="#">Login</a></li>
+                        </ul>
+                    </div>
             </div>
         </nav>
         <section class="bg">
-
         </section>
     </header>
-    <section>
-        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Exercitationem aspernatur, 
-        veniam, qui rem culpa enim dolor odio sapiente porro doloremque eaque inventore 
-        temporibus iusto deserunt omnis facere, quasi laudantium veritatis tempora. 
-        Asperiores rerum eum minima dolores! Ad fuga a doloremque eius tempora perferendis
-         maiores iure nulla enim quidem omnis ea dolorum voluptatem, beatae quis repellendus 
-         reiciendis voluptatibus placeat corporis! Minus, a. Natus, alias suscipit dolores cumque
-          sint neque ipsam quasi repudiandae tenetur velit, optio architecto vero quos expedita 
-          itaque cum veniam quam enim voluptatem eveniet! Quam ipsam dolorum, nam necessitatibus 
-          perspiciatis rem corrupti repellat sit facere, quibusdam cumque labore itaque.
-          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Exercitationem aspernatur, 
-          veniam, qui rem culpa enim dolor odio sapiente porro doloremque eaque inventore 
-          temporibus iusto deserunt omnis facere, quasi laudantium veritatis tempora. 
-          Asperiores rerum eum minima dolores! Ad fuga a doloremque eius tempora perferendis
-           maiores iure nulla enim quidem omnis ea dolorum voluptatem, beatae quis repellendus 
-           reiciendis voluptatibus placeat corporis! Minus, a. Natus, alias suscipit dolores cumque
-            sint neque ipsam quasi repudiandae tenetur velit, optio architecto vero quos expedita 
-            itaque cum veniam quam enim voluptatem eveniet! Quam ipsam dolorum, nam necessitatibus 
-            perspiciatis rem corrupti repellat sit facere, quibusdam cumque labore itaque.
-            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Exercitationem aspernatur, 
-            veniam, qui rem culpa enim dolor odio sapiente porro doloremque eaque inventore 
-            temporibus iusto deserunt omnis facere, quasi laudantium veritatis tempora. 
-            Asperiores rerum eum minima dolores! Ad fuga a doloremque eius tempora perferendis
-             maiores iure nulla enim quidem omnis ea dolorum voluptatem, beatae quis repellendus 
-             reiciendis voluptatibus placeat corporis! Minus, a. Natus, alias suscipit dolores cumque
-              sint neque ipsam quasi repudiandae tenetur velit, optio architecto vero quos expedita 
-              itaque cum veniam quam enim voluptatem eveniet! Quam ipsam dolorum, nam necessitatibus 
-              perspiciatis rem corrupti repellat sit facere, quibusdam cumque labore itaque.
-              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Exercitationem aspernatur, 
-              veniam, qui rem culpa enim dolor odio sapiente porro doloremque eaque inventore 
-              temporibus iusto deserunt omnis facere, quasi laudantium veritatis tempora. 
-              Asperiores rerum eum minima dolores! Ad fuga a doloremque eius tempora perferendis
-               maiores iure nulla enim quidem omnis ea dolorum voluptatem, beatae quis repellendus 
-               reiciendis voluptatibus placeat corporis! Minus, a. Natus, alias suscipit dolores cumque
-                sint neque ipsam quasi repudiandae tenetur velit, optio architecto vero quos expedita 
-                itaque cum veniam quam enim voluptatem eveniet! Quam ipsam dolorum, nam necessitatibus 
-                perspiciatis rem corrupti repellat sit facere, quibusdam cumque labore itaque.
-                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Exercitationem aspernatur, 
-                veniam, qui rem culpa enim dolor odio sapiente porro doloremque eaque inventore 
-                temporibus iusto deserunt omnis facere, quasi laudantium veritatis tempora. 
-                Asperiores rerum eum minima dolores! Ad fuga a doloremque eius tempora perferendis
-                 maiores iure nulla enim quidem omnis ea dolorum voluptatem, beatae quis repellendus 
-                 reiciendis voluptatibus placeat corporis! Minus, a. Natus, alias suscipit dolores cumque
-                  sint neque ipsam quasi repudiandae tenetur velit, optio architecto vero quos expedita 
-                  itaque cum veniam quam enim voluptatem eveniet! Quam ipsam dolorum, nam necessitatibus 
-                  perspiciatis rem corrupti repellat sit facere, quibusdam cumque labore itaque.
+
+    <section class="socialteam-projects">
+        
     </section>
+
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
 </body>
