--- a/index.html
+++ b/index.html
@@ -25,13 +25,10 @@
     <header>
         <nav>
             <div class="navbar navbar-expand-lg navbar-dark bg-transparent container">
-                <button class="navbar-toggler" data-toggle="collapse" type="button" data-target="#navbarSupportedContent"
-                aria-controls="navbarSupportedContent" aria-expanded="true" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <a class="logo navbar-brand"">schoolMultinotify</a>
+                <a class="logo navbar-brand">schoolMultinotify</a>
                     <div class="navbar-collapse collapse show" id="navbarSupportedContent">
                         <ul class="navbar-nav ml-auto">
+                           
                             <li class="nav-item"><a class="active" href="#">Home</a></li>
                             <li class="nav-item"><a href="#">About</a></li>
                             <li class="nav-item"><a href="#">Contact</a></li>
@@ -44,8 +41,17 @@
         </section>
     </header>
 
-    <section class="socialteam-projects">
-        
+    <section class="socialteam-advantages">
+        <div class="container">
+            <div class="row">
+                <div class='col-md-5'>
+                        <h1 class="mb-5 section-text">Tworzymy wiele projektów. Nasze cechy to:</h1>
+                </div>
+                <div class='col-md-9'>
+                        <h1 class="mb-9 section-text">Tworzymy wiele projektów. Nasze cechy to:</h1>
+                </div>
+            </div>
+        </div>
     </section>
 
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
